<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ActivityMain">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        app:srcCompat="@drawable/css_convertor_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:text="@string/convert_between_css_units"
        android:textAlignment="center"
        android:textColor="@color/convertor_gray_dark"
        android:textSize="18sp"
        android:textStyle="bold" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <Button
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:gravity="center"
            android:text="@string/pixels"
            android:textColor="@color/white"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <Button
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ems"
            android:textColor="@color/white"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <Button
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:gravity="center"
            android:text="@string/points"
            android:textColor="@color/white"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/pixels"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/round_box"
            android:gravity="center"
            android:hint="@string/px"
            android:inputType="number"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/em"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:background="@drawable/round_box"
            android:gravity="center"
            android:hint="@string/em"
            android:inputType="number"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/points"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_gravity="fill_horizontal"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:background="@drawable/round_box"
            android:gravity="center"
            android:hint="@string/pt"
            android:inputType="number"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>

    <Button
        android:id="@+id/calculate"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="0dp"
        android:text="Calculate" />


</LinearLayout>