<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_ems_convertor"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/ems_pixels"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/round_box_gray"
        android:gravity="center"
        android:hint="@string/px"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ems_em"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:background="@drawable/round_box_gray"
        android:gravity="center"
        android:hint="@string/em"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ems_points"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_gravity="fill_horizontal"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:background="@drawable/round_box_gray"
        android:gravity="center"
        android:hint="@string/pt"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />


</LinearLayout>